--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -30,5 +30,6 @@ jobs:
     - run: npm run build --if-present
     - run: npm run test:unit
     - run: npm run type-check
+    - run: npx playwright install
     - run: npm run test:e2e
    
