--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -15,6 +15,6 @@
     "module": "ESNext",
     "moduleResolution": "Bundler",
     "types": ["node"],
-    "noImplicitAny": true
+    "noImplicitAny": false
   }
 }
