--- a/tsconfig.vitest.json
+++ b/tsconfig.vitest.json
@@ -2,9 +2,10 @@
   "extends": "./tsconfig.app.json",
   "exclude": [],
   "compilerOptions": {
-    "composite": true,
+    "resolveJsonModule": true,
+    "esModuleInterop": true ,
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.vitest.tsbuildinfo",
-
+    
     "lib": [],
     "types": ["node", "jsdom"]
   }
