--- a/tsconfig.vitest.json
+++ b/tsconfig.vitest.json
@@ -5,7 +5,7 @@
     "resolveJsonModule": true,
     "esModuleInterop": true ,
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.vitest.tsbuildinfo",
-    
+    "composite": true,
     "lib": [],
     "types": ["node", "jsdom"]
   }
