--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "axios": "^1.6.7",
     "pinia": "^2.1.7",
     "vue": "^3.4.21",
-    "vue-router": "^4.3.0"
+    "vue-router": "^4.3.0",
+    "vue-tailwind-datepicker": "^1.7.3"
   },
   "devDependencies": {
     "@playwright/test": "^1.42.1",
