--- a/tsconfig.vitest.json
+++ b/tsconfig.vitest.json
@@ -4,8 +4,8 @@
   "compilerOptions": {
     "resolveJsonModule": true,
     "esModuleInterop": true ,
+    "incremental": true,
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.vitest.tsbuildinfo",
-    "composite": true,
     "lib": [],
     "types": ["node", "jsdom"]
   }
